# magic-mirror

./: CMakeCache.txt  Makefile  README.md  Untitled.ipynb  bing_voice.py  bitly.py  camcv  camcv_original.c  camcv_vid0.c  deploy.sh  eddystone-beacon.js  eslab-final-report.pages  face_data.py  final-demo.key  m.py  magic-mirror-ecf69d102383.json  main-gui.ipynb  main-gui.py  result.txt  shorten.py  sync-request.json  test.flac  test.py  tinycc.py  transcribe.sh  tts.py
.ipynb_checkpoints/: main-gui-checkpoint.ipynb
bryan_dp/: faces.csv
camcv/: CMakeLists.txt  Makefile  camcv  camcv.c  camcv_vid1.cpp  cmake_install.cmake
transcribe/: transcribe.py
